test/tests/BadOverride.expected
BadOverride.panda:9:5: error: method foo():panda.core.Int64 is marked @override, but no matching method exists among its ancestors
BadOverride.panda:16:5: error: method foo():panda.core.String overrides function foo():panda.core.String (BadOverride.panda:2:5), but is not a function
2 errors
